# projecthub

./: .env  .gitignore  pyproject.toml
src/: __init__.py  config.py
src/Entity/: Category.php  Functionality.php  Project.php  Skill.php  Task.php  Technology.php  User.php
src/Repository/: FunctionalityRepository.php
src/controllers/: user_controller.py
src/models/: user.py
templates/home/: index.html.twig
